# sample-rust-cdk-app

./: .prettierignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
examples/: README.md  sample.rs  send_lambda_failure_email.rs  set_tag.rs
examples/upload_ses_templates/: README.md  main.rs
examples/upload_ses_templates/helpers/: ses.rs
examples/upload_ses_templates/templates/: test_failure.html
examples/utils/: mod.rs  stage_ext.rs
lib/: sample-rust-cdk-app-stack.ts  stage-config-model.ts  utils.ts
src/: constants.rs  context.rs  lib.rs  main.rs  models.rs  types.rs  utils.rs
src/aws/: mod.rs  models.rs  s3.rs  secrets.rs  ses.rs
src/requests/: client.rs  constants.rs  mod.rs  models.rs
stage_configs/: dev.toml  prod.toml
test/: sample-rust-cdk-app.test.ts
